# subgrapher

./: pyproject.toml
res/: n30.supp.tre  n30.tre
subgrapher/: comparer.py  extract_subgraph.py  main.py  quartet_extracter.py  quintet_counter.py  runner.py
tests/: test_log_domain.py  test_quartet_extract.py  test_quintet_clades.py
